add smooth scroll

--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
       </section>
 
       <section class="order">
-        <a name="order"></a>
+        <a name="order" id="order"></a>
         <div class="container">
           <div class="order__wrapper">
             <div class="product">
